--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.claucookie.miniequalizer:library:1.0.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
+    implementation "com.android.support:support-compat:27.1.1"
+
 
 }
