--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,19 +31,24 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:28.0.0'
+
+
     implementation 'com.github.claucookie.miniequalizer:library:1.0.0'
+  /*  implementation 'com.google.android.material:material:1.1.0'*/
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
+
     //noinspection GradleCompatible
     implementation "com.android.support:support-compat:27.1.1"
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     //noinspection GradleCompatible
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.google.android.material:material:1.0.0'
+
 
 
 }
