--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             </intent-filter>
 
         </activity>
-        <service android:name="Service.ServiceMediaPlay"/>
+        <service android:name="Service.MediaPlaybackService"/>
 
 
     </application>
